--- a/contact.html
+++ b/contact.html
@@ -1,48 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Basic Portfolio</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<title>Contact Page</title>
 </head>
-<body>
+<body background="hypnotize.png">
 
-		<HEADER>Joe Arnold</HEADER>
-	
-		<a href="index.html">About</a>
-
-		<a href="portfolio.html">Porfolio</a>
-
-		<a href="contact.html">Contact</a>
+	<div class="header">
+		<h1>Joe Arnold</h1>
+			<nav class=navbar>
+				<li><a href="https://www.google.com/">About</a></li>
+				<li><a href="">Portfolio</a></li>
+				<li><a href="">Contact</a></li>
+			</nav>
+	</div>
 
 	<div class="container">
+	
+			<h2>Contact</h2>
 
-		<h1>Contact</h1>
-
-		<h2>Name</h2>
-		<div id="textarea" contenteditable="write name here">
-
-		<h2>Email</h2>
-		<div id="textarea" contenteditable="write name here">
-
-		<h2>Message</h2>
-		<div id="textarea" contenteditable="write name here">
-
-	</div>
-	<div class="connect">
-
-		<h2>Connect With Me</h2>
-
-		<a href="https://github.com/"><img src="https://imageog.flaticon.com/icons/png/512/38/38401.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF" height="50" width="100">
-
-		<a href="https://my.indeed.com/resume"><img src="https://lh3.googleusercontent.com/H0pHyu8AVpjvQIP6NrSdU0JMEZBnEQ2PO3exWnvR1qckMGJDwhekt-dWKFjWbZlQl4I=w300" height="50" width="50">
-
-		<a href="https://stackoverflow.com/"><img src="">
+			<div id="line"></div>
+			<br>
+			
+			<h4>Name</h4>
+			<input type="text" name="john smith">
+			<h4>Email</h4>
+			<input type="text" name="example@gmail.com">
+			<h4>Message</h4>
+			<input class="message" type="text" name="">
+			<input type="submit" class="button">
 
 	</div>
 
-	<footer>
+		<div class="connect">
 
-		<img src="https://www.famouslogos.net/images/copyright-logo.jpg" height="20" width="20">2016 Joe Arnold 
+		<h3>Connect With Me</h3>
 
-	</footer>
+		<div id="line">
+
+			<a href="https://github.com/"><img class="social1" src="assets/images/if_github_circle_black_107161.png" height="60" width="60"></a>
+
+			<a href="https://my.indeed.com/resume"><img class="social2" src="assets/images/if_linkedin_circle_color_107178.png" height="60" width="60"></a>
+
+			<a href="https://stackoverflow.com/"><img class="social" src="assets/images/if_stackoverflow_313469.png" height="60" width="60"></a>
+
+		</div>
+	</div>
+
+		<footer id="footer">&copy; Copyright 2016 Joe Arnold</footer>
+			
 </body>
 </html>
