--- a/index.html
+++ b/index.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<title>Basic Portfolio</title>
 </head>
-<body>
-
-		<HEADER>Joe Arnold</HEADER>
+<body background="hypnotize.png">
 	
-		<a href="index.html">About</a>
-
-		<a href="portfolio.html">Porfolio</a>
-
-		<a href="contact.html">Contact</a>
+	<div class="header">
+		<h1>Joe Arnold</h1>
+			<nav class=navbar>
+				<li><a href="https://www.google.com/">About</a></li>
+				<li><a href="">Portfolio</a></li>
+				<li><a href="">Contact</a></li>
+			</nav>
+	</div>
 
 	<div class="container">
 
-		<h1>About Me</h1>
+		<h2>About Me</h2>
+
+		<div id="line">
 		
-		<img src="https://avatars0.githubusercontent.com/u/31999583?s=400&u=fc22d730a20a272a7682cbae52d5a2d0d216e858&v=4">
+		<img src="assets/images/IMG_2618 (1).jpg" height="250px">
+	</div>
 
-		<img src="../images/IMG_2618 (1).JPG">
-
-		<p>
-			I was born in Steamboat Springs, Colorado but was raised in Houston, Texas until age 12. My parents moved my brother, Ryan and I, to Grand Junction, Colorado. Moving from a huge city to a small town was a huge shock for me but I grew to love living close to the mountains and eventually learned to deal with winter. 
+		<p class="paragraph">
+			I was born in Steamboat Springs, Colorado but was raised in Houston, Texas until age 12. My parents moved my brother, Ryan and I, to Grand Junction, Colorado. Moving from a huge city to a small town was a shock for me but I grew to love living close to the mountains and eventually learned to deal with winter. 
 		</p>
+		<br>
 		<p>
-			After high school I moved to California to play baseball at a Junior College. I went on to play at Mount Mercy University in Cedar Rapids, Iowa. While in school I earned my BA in English because I wanted to be a baseball coach and teacher.  Today, I live in Capitol Hill, Denver. I enjoy playing softball, basketball, skateboarding, and hiking. 
+			After high school I moved to California to play baseball at a Junior College. I went on to play at Mount Mercy University in Cedar Rapids, Iowa. While in school, I earned my BA in English because I wanted to be a baseball coach and teacher.  Today, I live in Capitol Hill, Denver. I enjoy playing softball, basketball, skateboarding, and hiking. 
 		</p>
 	</div>
+
 	<div class="connect">
 
-		<h2>Connect With Me</h2>
+		<h3>Connect With Me</h3>
 
-		<a href="https://github.com/"><img src="https://imageog.flaticon.com/icons/png/512/38/38401.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF" height="50" width="100">
+		<div id="line">	</div>
 
-		<a href="https://my.indeed.com/resume"><img src="https://lh3.googleusercontent.com/H0pHyu8AVpjvQIP6NrSdU0JMEZBnEQ2PO3exWnvR1qckMGJDwhekt-dWKFjWbZlQl4I=w300" height="50" width="50">
+			<a href="https://github.com/"><img class="social1" src="assets/images/if_github_circle_black_107161.png" height="60" width="60"></a>
 
-		<a href="https://stackoverflow.com/">
+			<a href="https://my.indeed.com/resume"><img class="social2" src="assets/images/if_linkedin_circle_color_107178.png" height="60" width="60"></a>
 
-	</div>
+			<a href="https://stackoverflow.com/"><img class="social" src="assets/images/if_stackoverflow_313469.png" height="60" width="60"></a>
+</div>
 
-	<footer>
+	<footer id="footer">&copy; Copyright 2016 Joe Arnold</footer>
 
-		<img src="https://www.famouslogos.net/images/copyright-logo.jpg" height="20" width="20">2016 Joe Arnold 
-
-	</footer>
 </body>
 </html>
