--- a/portfolio.html
+++ b/portfolio.html
@@ -1,16 +1,85 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Basic Portfolio</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
+	<title>Portfolio</title>
 </head>
-<body>
 
-		<HEADER>Joe Arnold</HEADER>
-	
-		<a href="index.html">About</a>
+<body background="hypnotize.png">
 
-		<a href="portfolio.html">Porfolio</a>
-
-		<a href="contact.html">Contact</a>
+	<div class="header">
+		<h1>Joe Arnold</h1>
+			<nav class=navbar>
+				<li><a href="https://www.google.com/">About</a></li>
+				<li><a href="">Portfolio</a></li>
+				<li><a href="">Contact</a></li>
+			</nav>
+	</div>
 
 	<div class="container">
+
+		<h2>Portfolio</h2>
+
+		<div id="line"></div>
+
+		<div class="image1">
+
+			<img src="assets/images/POTD.JPG" class="portfoliopics"  height= 200 width="275"> 
+
+			<h5><span>Tetons</span></h5>
+
+		</div>
+
+		<div class="image2">
+
+			<img src="assets/images/POTD2BIG.JPG" class="portfoliopics" height= 200 width="275">
+
+			<h6><span>Maroon Bells</span></h6>
+
+		</div>
+
+		<div class="image3">
+			
+			<img src="assets/images/rocksBIG.JPG" class="portfoliopics" height= 200 width="275">
+
+			<dl><span>Yellowstone</span></dl>
+
+		</div>
+
+		<div class="image4">
+
+			<img src="assets/images/LEAF.JPG" class="portfoliopics" height= 200 width="275">
+
+			<b><span>Aspen</span></b>
+
+		</div>
+
+		<div class="image5">
+
+			<img src="assets/images/SPRINGS1.JPG" height="200" width="275">
+
+			<i><span>Me</span></i>
+
+		</div>
+
+	</div>
+
+<div class="connect">
+
+		<h3>Connect With Me</h3>
+
+		<div id="line"></div>
+
+			<a href="https://github.com/"><img class="social1" src="assets/images/if_github_circle_black_107161.png" height="60" width="60"></a>
+
+			<a href="https://my.indeed.com/resume"><img class="social2" src="assets/images/if_linkedin_circle_color_107178.png" height="60" width="60"></a>
+
+			<a href="https://stackoverflow.com/"><img class="social" src="assets/images/if_stackoverflow_313469.png" height="60" width="60"></a>
+</div>
+
+	<footer id="footer">&copy; Copyright 2016 Joe Arnold</footer>
+
+</body>
+</html>
