--- a/contact.html
+++ b/contact.html
@@ -11,9 +11,9 @@
 	<div class="header">
 		<h1>Joe Arnold</h1>
 			<nav class=navbar>
-				<li><a href="https://www.google.com/">About</a></li>
-				<li><a href="">Portfolio</a></li>
-				<li><a href="">Contact</a></li>
+				<li><a href="index.html">About</a></li>
+				<li><a href="portfolio.html">Portfolio</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</nav>
 	</div>
 
