--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<div id="line">
 		
-		<img src="assets/images/IMG_2618 (1).jpg" height="250px">
+		<img src="assets/images/IMG_2618 (1) copy.jpg" height="250px">
 	</div>
 
 		<p class="paragraph">
