--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 		<div id="line">
 		
-		<img src="assets/images/IMG_2618 (1) copy.jpg" height="250px">
+		<img src="https://avatars0.githubusercontent.com/u/31999583?s=400&u=fc22d730a20a272a7682cbae52d5a2d0d216e858&v=4" height="250px">
 	</div>
 
 		<p class="paragraph">
