--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
 		<div id="line">	</div>
 
-			<a href="https://github.com/"><img class="social1" src="assets/images/if_github_circle_black_107161.png" height="60" width="60"></a>
+			<a href="https://github.com/josephwilliam11"><img class="social1" src="assets/images/if_github_circle_black_107161.png" height="60" width="60"></a>
 
-			<a href="https://my.indeed.com/resume"><img class="social2" src="assets/images/if_linkedin_circle_color_107178.png" height="60" width="60"></a>
+			<a href="https://www.linkedin.com/in/joseph-arnold-4aa06985/"><img class="social2" src="assets/images/if_linkedin_circle_color_107178.png" height="60" width="60"></a>
 
 			<a href="https://stackoverflow.com/"><img class="social" src="assets/images/if_stackoverflow_313469.png" height="60" width="60"></a>
 </div>
